; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/omap3isp/extr_isppreview.c_preview_config_yc_range.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/omap3isp/extr_isppreview.c_preview_config_yc_range.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.isp_prev_device = type { i32 }
%struct.prev_params = type { %struct.omap3isp_prev_yclimit }
%struct.omap3isp_prev_yclimit = type { i32, i32, i32, i32 }
%struct.isp_device = type { i32 }

@ISPPRV_SETUP_YC_MAXC_SHIFT = common dso_local global i32 0, align 4
@ISPPRV_SETUP_YC_MAXY_SHIFT = common dso_local global i32 0, align 4
@ISPPRV_SETUP_YC_MINC_SHIFT = common dso_local global i32 0, align 4
@ISPPRV_SETUP_YC_MINY_SHIFT = common dso_local global i32 0, align 4
@OMAP3_ISP_IOMEM_PREV = common dso_local global i32 0, align 4
@ISPPRV_SETUP_YC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.isp_prev_device*, %struct.prev_params*)* @preview_config_yc_range to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @preview_config_yc_range(%struct.isp_prev_device* %0, %struct.prev_params* %1) #0 {
  %3 = alloca %struct.isp_prev_device*, align 8
  %4 = alloca %struct.prev_params*, align 8
  %5 = alloca %struct.isp_device*, align 8
  %6 = alloca %struct.omap3isp_prev_yclimit*, align 8
  store %struct.isp_prev_device* %0, %struct.isp_prev_device** %3, align 8
  store %struct.prev_params* %1, %struct.prev_params** %4, align 8
  %7 = load %struct.isp_prev_device*, %struct.isp_prev_device** %3, align 8
  %8 = call %struct.isp_device* @to_isp_device(%struct.isp_prev_device* %7)
  store %struct.isp_device* %8, %struct.isp_device** %5, align 8
  %9 = load %struct.prev_params*, %struct.prev_params** %4, align 8
  %10 = getelementptr inbounds %struct.prev_params, %struct.prev_params* %9, i32 0, i32 0
  store %struct.omap3isp_prev_yclimit* %10, %struct.omap3isp_prev_yclimit** %6, align 8
  %11 = load %struct.isp_device*, %struct.isp_device** %5, align 8
  %12 = load %struct.omap3isp_prev_yclimit*, %struct.omap3isp_prev_yclimit** %6, align 8
  %13 = getelementptr inbounds %struct.omap3isp_prev_yclimit, %struct.omap3isp_prev_yclimit* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @ISPPRV_SETUP_YC_MAXC_SHIFT, align 4
  %16 = shl i32 %14, %15
  %17 = load %struct.omap3isp_prev_yclimit*, %struct.omap3isp_prev_yclimit** %6, align 8
  %18 = getelementptr inbounds %struct.omap3isp_prev_yclimit, %struct.omap3isp_prev_yclimit* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @ISPPRV_SETUP_YC_MAXY_SHIFT, align 4
  %21 = shl i32 %19, %20
  %22 = or i32 %16, %21
  %23 = load %struct.omap3isp_prev_yclimit*, %struct.omap3isp_prev_yclimit** %6, align 8
  %24 = getelementptr inbounds %struct.omap3isp_prev_yclimit, %struct.omap3isp_prev_yclimit* %23, i32 0, i32 2
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @ISPPRV_SETUP_YC_MINC_SHIFT, align 4
  %27 = shl i32 %25, %26
  %28 = or i32 %22, %27
  %29 = load %struct.omap3isp_prev_yclimit*, %struct.omap3isp_prev_yclimit** %6, align 8
  %30 = getelementptr inbounds %struct.omap3isp_prev_yclimit, %struct.omap3isp_prev_yclimit* %29, i32 0, i32 3
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* @ISPPRV_SETUP_YC_MINY_SHIFT, align 4
  %33 = shl i32 %31, %32
  %34 = or i32 %28, %33
  %35 = load i32, i32* @OMAP3_ISP_IOMEM_PREV, align 4
  %36 = load i32, i32* @ISPPRV_SETUP_YC, align 4
  %37 = call i32 @isp_reg_writel(%struct.isp_device* %11, i32 %34, i32 %35, i32 %36)
  ret void
}

declare dso_local %struct.isp_device* @to_isp_device(%struct.isp_prev_device*) #1

declare dso_local i32 @isp_reg_writel(%struct.isp_device*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
